--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "fast-glob": "^3.2.7",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
     "vite": "^2.6.14",
     "vite-plugin-eslint": "^1.3.0",
     "vite-plugin-style-import": "^1.3.0"
